# ability_hand_sim

./: CMakeLists.txt  package.xml
config/: hand_control.yaml
launch/: hand_gazebo.launch.py  rviz.launch.py
src/: control_hand_test.cpp  reset_joints.cpp
urdf/: ability_hand_right.urdf  ability_hand_right_gazebo.urdf
